<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Apnalot</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    
    <string name="btn_send_message">Send Message</string>
    
    <!-- Activity titles -->    
    <string name="action_cart">Cart</string>
    
    <!-- Action Bar action items -->
    <string name="action_search">Search</string>
    
    <string name="action_login">Login</string>
    <string name="action_wishlist">Wishlist</string>
    <string name="action_rate">Rate App</string>
    <string name="action_share">Share</string>
    <string name="action_contact">Contact Us</string>
    <string name="action_policies">Policies</string>
    
    <!-- Search  -->
    <string name="search_hint">Search books..</string>
    
</resources>
